--- a/app/src/main/res/layout/activity_receiving.xml
+++ b/app/src/main/res/layout/activity_receiving.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".transaction_activity">
-
+    tools:context=".receiving">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
@@ -32,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:textColor="@color/black"
-            android:text="Send"
+            android:text="Receive"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +109,7 @@
         android:id="@+id/search_nearby"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Search Nearby"
+        android:text="Advertising Started"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         android:textColor="@color/black"
@@ -122,11 +121,12 @@
         android:id="@+id/instructn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Takes a while seconds to find near by devices to connect"
-        android:lines="2"
+        android:text="Your device is been advertised. It may take a moment or two for your peer to recognize."
+        android:lines="3"
+        android:minLines="1"
         android:textSize="20dp"
         android:layout_marginTop="10dp"
-        android:paddingLeft="20dp"
+        android:padding="20dp"
         app:layout_constraintTop_toBottomOf="@id/search_nearby"
         app:layout_constraintLeft_toLeftOf="@id/new_view"
         app:layout_constraintEnd_toEndOf="@id/new_view"/>
