--- a/app/src/main/res/layout/activity_payment_successful.xml
+++ b/app/src/main/res/layout/activity_payment_successful.xml
@@ -29,7 +29,9 @@
             android:id="@+id/success"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            app:lottie_rawRes="@raw/success"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/success_1"
             app:layout_constraintTop_toBottomOf="@id/back_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
