--- a/app/src/main/res/layout/activity_transaction2.xml
+++ b/app/src/main/res/layout/activity_transaction2.xml
@@ -122,6 +122,8 @@
         android:id="@+id/nearby_lottie"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         app:lottie_rawRes="@raw/nearby_connection"
         app:layout_constraintTop_toBottomOf="@id/search_nearby"
         app:layout_constraintStart_toStartOf="@id/new_view"
