--- a/app/src/main/res/layout/activity_receiving.xml
+++ b/app/src/main/res/layout/activity_receiving.xml
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
-            android:id="@+id/back_button"
+            android:id="@+id/back_button_receiving"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
