--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -136,27 +136,20 @@
 
     </View>
 
-    <ImageView
-        android:id="@+id/minus"
-        android:layout_width="200dp"
-        android:layout_height="20dp"
-        android:src="@drawable/minus"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="@id/new_view"
-        app:layout_constraintStart_toStartOf="@+id/new_view"
-        app:layout_constraintTop_toTopOf="@id/new_view" />
-
-    <TextView
-        android:id="@+id/asset"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Your assets"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:textColor="@color/black"
+    <Button
+        android:id="@+id/buy_token_main"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_margin="20dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/round_corner"
+        android:text="Buy BenzenCoin"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
         android:textSize="20dp"
-        app:layout_constraintTop_toBottomOf="@id/minus"
-        app:layout_constraintLeft_toLeftOf="@id/new_view"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
