--- a/app/src/main/res/layout/activity_amount_entry.xml
+++ b/app/src/main/res/layout/activity_amount_entry.xml
@@ -77,6 +77,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/amount_send"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
