--- a/app/src/main/res/layout/activity_buy_benzenecoin.xml
+++ b/app/src/main/res/layout/activity_buy_benzenecoin.xml
@@ -30,7 +30,7 @@
 
 
     <TextView
-        android:id="@+id/Balance"
+        android:id="@+id/Balance_bb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="28,718.78"
@@ -51,7 +51,7 @@
         android:textColor="@color/black"
         android:textSize="25dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Balance" />
+        app:layout_constraintTop_toBottomOf="@+id/Balance_bb" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textField"
@@ -64,7 +64,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="number"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
