--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -47,15 +47,15 @@
             android:text="Balance"
             android:textSize="25dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/back_button" />
+            app:layout_constraintTop_toBottomOf="@+id/back_button_transaction" />
 
 
 
         <TextView
-            android:id="@+id/Balance"
+            android:id="@+id/Balance_trans"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="28,718.78"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="40dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +67,8 @@
             android:layout_height="40dp"
             android:layout_marginLeft="40dp"
             android:background="@drawable/round_corner"
-            app:layout_constraintBottom_toBottomOf="@+id/Balance"
-            app:layout_constraintStart_toEndOf="@+id/Balance"
+            app:layout_constraintBottom_toBottomOf="@+id/Balance_trans"
+            app:layout_constraintStart_toEndOf="@+id/Balance_trans"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <TextView
