--- a/app/src/main/res/layout/activity_buy_benzenecoin.xml
+++ b/app/src/main/res/layout/activity_buy_benzenecoin.xml
@@ -63,6 +63,7 @@
         app:layout_constraintTop_toBottomOf="@id/textView_2">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/amount_bb"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"/>
